// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterSectionsByName should recursively filter sections and components by name 1`] = `
Array [
  Object {
    "components": Array [],
    "exampleMode": "collapse",
    "name": "General",
    "sections": Array [
      Object {
        "components": Array [
          Object {
            "name": "Button",
          },
        ],
        "exampleMode": "collapse",
        "name": "Particles",
        "sections": Array [],
      },
    ],
  },
]
`;

exports[`filterSectionsByName should skip sections without matches inside 1`] = `
Array [
  Object {
    "components": Array [],
    "exampleMode": "collapse",
    "name": "General",
    "sections": Array [],
  },
]
`;
